--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "dependencies": {
         "@heroicons/react": "^2.1.3",
         "aos": "^2.3.4",
-        "react-icons": "^5.2.1"
+        "exceljs": "^4.4.0",
+        "react-icons": "^5.2.1",
+        "xlsx": "^0.18.5",
+        "xlsx-style": "^0.8.13"
     }
 }
