--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "dependencies": {
         "@heroicons/react": "^2.1.3",
         "aos": "^2.3.4",
+        "date-fns": "^3.6.0",
         "exceljs": "^4.4.0",
+        "react-datepicker": "^7.3.0",
         "react-icons": "^5.2.1",
+        "react-router-dom": "^6.26.1",
         "xlsx": "^0.18.5",
         "xlsx-style": "^0.8.13"
     }
