--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "aos": "^2.3.4",
         "date-fns": "^3.6.0",
         "exceljs": "^4.4.0",
+        "react-countup": "^6.5.3",
         "react-datepicker": "^7.3.0",
         "react-icons": "^5.2.1",
         "react-router-dom": "^6.26.1",
